p2/conf/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args: ["echo 'Hello from App1!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nginx
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args: ["echo 'Hello from App2!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nginx
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args: ["echo 'Hello from App3!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
